--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-
+import Header from '../components/Header.astro'
+// import Navigation from '../components/Navigation.astro'
 ---
 
 <html lang="en">
@@ -12,15 +13,17 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<header class="d-flex justify-content-center py-3"> 
-			<ul class="nav nav-pills"> 
+		<!-- <header class="d-flex justify-content-center py-3">  -->
+			<!-- <ul class="nav nav-pills"> 
 				<li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li> 
 				<li class="nav-item"><a href="#" class="nav-link">Features</a></li> 
 				<li class="nav-item"><a href="#" class="nav-link">Pricing</a></li> 
 				<li class="nav-item"><a href="#" class="nav-link">FAQs</a></li> 
 				<li class="nav-item"><a href="#" class="nav-link">About</a></li> 
-			</ul> 
-		</header>
+			</ul>  -->
+			<!-- <Navigation />
+		</header> -->
+		<Header />
 		<div class="px-4 py-5 my-5 text-center"> 
 			<img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> 
 			<h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1> 
