--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
+import BaseLayout from '../layouts/BaseLayout.astro'
 import Header from '../components/Header.astro'
-// import Navigation from '../components/Navigation.astro'
+import Footer from '../components/Footer.astro'
 ---
+<BaseLayout>
 
-<html lang="en">
+<!-- <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -12,7 +14,7 @@ import Header from '../components/Header.astro'
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 		<title>Astro</title>
 	</head>
-	<body>
+	<body> -->
 		<!-- <header class="d-flex justify-content-center py-3">  -->
 			<!-- <ul class="nav nav-pills"> 
 				<li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li> 
@@ -23,7 +25,7 @@ import Header from '../components/Header.astro'
 			</ul>  -->
 			<!-- <Navigation />
 		</header> -->
-		<Header />
+		<!-- <Header /> -->
 		<div class="px-4 py-5 my-5 text-center"> 
 			<img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> 
 			<h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1> 
@@ -35,7 +37,8 @@ import Header from '../components/Header.astro'
 				</div> 
 			</div> 
 		</div>
-		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"> 
+		<!-- <Footer /> -->
+		<!-- <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"> 
 			<p class="col-md-4 mb-0 text-body-secondary">© 2025 Company, Inc</p> 
 			<a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" aria-label="Bootstrap"> 
 				<svg class="bi me-2" width="40" height="32" aria-hidden="true"><use xlink:href="#bootstrap"></use></svg> 
@@ -47,7 +50,8 @@ import Header from '../components/Header.astro'
 				<li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li> 
 				<li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li> 
 			</ul> 
-		</footer>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+		</footer> -->
+		<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 	</body>
-</html>
+</html> -->
+</BaseLayout>
